--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             <span>Works</span>
     </a>
     <div class="textbox">
-        <img src="./Artboard 1.png">
+        <!-- <img src="./Artboard 1.png"> -->
     </div>
+    <!-- <script src="./auth.js"></script> -->
 </body>
 </html>
